--- a/trydjango19/src/templates/post_list.html
+++ b/trydjango19/src/templates/post_list.html
@@ -1,44 +1,128 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class='col-sm-8 col-sm-offset-2'>
-<h1>{{title}}</h1>	
+<style>
+   {% block style %}
+   h1{
+   color:green;
+   }
+   {% endblock style %}
+</style>
 
+<h2 style='background-color: green;'>{{title}}</h2>
+<!-- <form action="" method='GET' >
+   <input type='text' placeholder='Search posts' name='q' value="{{ request.GET.q }}">
+   <input type="submit" value="Search">
+</form> -->
 {% for obj in object_list %}
-<div class="row">
-  <div class="col-sm-12">
-    <div class="thumbnail">
-      {% if obj.image %}
-     <img src='{{ obj.image.url }}' class='img-responsive' />
-      {% endif %}
-      <div class="caption">
-        <h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a><small>{{ obj.timestamp|timesince }} ago</small></h3>
-        <p>{{ obj.content|linebreaks|truncatechars:120 }}</p>
-        <p><a href='{{ obj.get_absolute_url }}' class="btn btn-primary" role="button">View</a></p>
+<div class='container'>
+   <div class="row">
+      <div class="col-sm-3">
+         <div class="thumbnail">
+            {% if obj.image %}
+            <img src='{{ obj.image.url }}' class='img-responsive' />
+            {% endif %}
+            <div class="caption">
+               {% if obj.draft %}
+               {% if obj.publish > today %}
+               <h3>Future Post {% endif %}</h3>
+               {% endif %}
+               <h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a> - <small>{{ obj.publish }} ago</small></h3>
+               {% if obj.user.get_full_name %}
+               <p>Author: {{ obj.user.get_full_name }}</p>
+               {% endif %}
+               <p>{{ obj.content|linebreaks|truncatechars:120 }}</p>
+                <p><a href='{{ obj.get_absolute_url }}' class="btn btn-primary" role="button"> <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>Detail</a> 
+                  <a href='' class="btn btn-success" role="button"> <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>Add to Cart</a>     
+               </p>
+            </div>
+         </div>
       </div>
-    </div>
-    </div>
-    <hr>
-  </div>
+      <!--hang1 -->
+      <div class="col-sm-3">
+         <div class="thumbnail">
+            {% if obj.image %}
+            <img src='{{ obj.image.url }}' class='img-responsive' />
+            {% endif %}
+            <div class="caption">
+               {% if obj.draft %}
+               <h3>Draft</h3>
+               {% if obj.publish > today %}
+               <h3>Future Post {% endif %}</h3>
+               {% endif %}
+               <h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a> - <small>{{ obj.publish }} ago</small></h3>
+               {% if obj.user.get_full_name %}
+               <p>Author: {{ obj.user.get_full_name }}</p>
+               {% endif %}
+               <p>{{ obj.content|linebreaks|truncatechars:120 }}</p>
+                <p><a href='{{ obj.get_absolute_url }}' class="btn btn-primary" role="button"> <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>Detail</a> 
+                  <a href='' class="btn btn-success" role="button"> <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>Add to Cart</a>     
+               </p>
+            </div>
+         </div>
+      </div>
+      <!--hang1 -->
+      <div class="col-sm-3">
+         <div class="thumbnail">
+            {% if obj.image %}
+            <img src='{{ obj.image.url }}' class='img-responsive' />
+            {% endif %}
+            <div class="caption">
+               {% if obj.draft %}
+               <h3>Draft</h3>
+               {% if obj.publish > today %}
+               <h3>Future Post {% endif %}</h3>
+               {% endif %}
+               <h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a> - <small>{{ obj.publish }} ago</small></h3>
+               {% if obj.user.get_full_name %}
+               <p>Author: {{ obj.user.get_full_name }}</p>
+               {% endif %}
+               <p>{{ obj.content|linebreaks|truncatechars:120 }}</p>
+               <p><a href='{{ obj.get_absolute_url }}' class="btn btn-primary" role="button"> <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>Detail</a> 
+                  <a href='' class="btn btn-success" role="button"> <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>Add to Cart</a>     
+               </p>
+            </div>
+         </div>
+      </div>
+      <!--hang1 -->
+      <div class="col-sm-3">
+         <div class="thumbnail">
+            {% if obj.image %}
+            <img src='{{ obj.image.url }}' class='img-responsive' />
+            {% endif %}
+            <div class="caption">
+               {% if obj.draft %}
+               <h3>Draft</h3>
+               {% if obj.publish > today %}
+               <h3>Future Post {% endif %}</h3>
+               {% endif %}
+               <h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a> - <small>{{ obj.publish }} ago</small></h3>
+               {% if obj.user.get_full_name %}
+               <p>Author: {{ obj.user.get_full_name }}</p>
+               {% endif %}
+               <p>{{ obj.content|linebreaks|truncatechars:120 }}</p>
+               <p><a href='{{ obj.get_absolute_url }}' class="btn btn-primary" role="button"> <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>Detail</a> 
+                  <a href='' class="btn btn-success" role="button"> <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>Add to Cart</a>     
+               </p>
+            </div>
+         </div>
+      </div>
+      <!--hang1 -->
+      <hr>
+   </div>
+</div>
 {% endfor %}
-
 <div class="pagination">
-    <span class="step-links">
-        {% if object_list.has_previous %}
-            <a href="?page={{ object_list.previous_page_number }}">previous</a>
-        {% endif %}
-
-        <span class="current">
-            Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.
-        </span>
-
-        {% if object_list.has_next %}
-            <a href="?page={{ object_list.next_page_number }}">next</a>
-        {% endif %}
-    </span>
+   <span class="step-links">
+   {% if object_list.has_previous %}
+   <a href="?page={{ object_list.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">previous</a>
+   {% endif %}
+   <span class="current">
+   Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.
+   </span>
+{% if object_list.has_next %}
+   <a href="?page={{ object_list.next_page_number }}&q={% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">next</a>
+   {% endif %}
+   </span>
 </div>
-
-
-</div>
-
 {% endblock content %}
